--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@
   --title-margen-bottom: 8px;
   --card-set-gap: 24px;
   --footer-padding-work: 120px;
+
+  --anime-fast: 250ms;
 }
 body {
   color: var(--primari-text-color);
@@ -107,12 +109,37 @@ p {
 }
 
 .site-nav .link {
+  position: relative;
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
 
   color: var(--title-text-color);
   font-weight: 500;
+
+  transition: color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-line-link::after {
+  content: "";
+
+  position: absolute;
+  bottom: 4px;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+
+  border-radius: 2px;
+
+  transition: color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1),
+    background-color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-line-link.current::after,
+.header-line-link:focus::after,
+.header-line-link:hover::after {
+  background-color: var(--hover-color);
 }
 
 .site-nav .link:hover,
@@ -136,6 +163,8 @@ p {
   padding-top: 24px;
   padding-bottom: 24px;
   color: var(--primari-text-color);
+
+  transition: color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
 }
 /**
   |============================
@@ -190,6 +219,7 @@ p {
   cursor: pointer;
   text-align: center;
   border: none;
+  transition: background-color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
 }
 .but:hover,
 .but:focus {
@@ -324,6 +354,8 @@ p {
   align-items: center;
   background-color: #4d5ae5;
   border-radius: 50%;
+
+  transition: background-color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-icon-link:hover,
@@ -361,6 +393,7 @@ p {
   align-items: center;
   color: var(--cust-icon);
   align-self: start;
+  transition: color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-icon {
   display: block;
@@ -426,6 +459,8 @@ p {
   height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
+
+  transition: background-color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
 }
 .media-icon {
   display: block;
@@ -469,6 +504,9 @@ p {
   text-align: center;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  transition: color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1),
+    background-color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
@@ -491,6 +529,47 @@ p {
 .project-card {
   width: calc((100% - 48px) / 3);
 }
+/* ---------team-box------ */
+.team-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  opacity: 0;
+
+  width: 100%;
+  height: 100%;
+
+  transition: transform var(--anime-fast);
+}
+
+.project-card:hover .overlay {
+  transform: translateY(0);
+  opacity: 1;
+}
+.team-label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  padding-left: 32px;
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-bottom: 40px;
+
+  color: var(--footer-text-color);
+
+  background-color: var(--accent-color);
+}
+
 .work-box {
   padding: 32px 16px;
 
@@ -500,9 +579,93 @@ p {
 }
 .prodject-link {
   display: block;
+  transition: box-shadow var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
 }
 .prodject-link:hover,
 .prodject-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+/**
+  |============================
+  |           modal
+  |============================
+*/
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(46, 47, 66, 0.4);
+  backdrop-filter: blur(5px);
+
+  transition: opacity 250ms ease, visibility 250ms ease,
+    backdrop-filter 250ms ease;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  backdrop-filter: blur(0);
+
+  transition-delay: 400ms;
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(0) scale(1);
+  opacity: 1;
+  overflow: auto;
+
+  width: 408px;
+  min-height: 576px;
+  padding: 24px;
+
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transition: transform 500ms ease-in 200ms, opacity 500ms ease-in 200ms;
+}
+.backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: translate(-200%, -200%) rotate(360deg) scale(0.3);
+}
+
+.bnt-modal-close {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  margin-left: auto;
+
+  color: var(--title-text-color);
+
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  transition: color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1),
+    background-color var(--anime-fast) cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
+}
+.bnt-modal-close:hover,
+.bnt-modal-close:focus {
+  color: var(--button-color);
+  background: var(--hover-color);
+}
+.x-icon {
+  display: block;
+  width: 100%;
+  height: 100%;
+  fill: currentColor;
 }
